background photo added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             font-family: 'Dancing Script', cursive;
         }
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://placehold.co/1200x800/433A3F/FBF6F0?text=') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./WhatsApp\ Image\ 2025-07-24\ at\ 12.01.20\ PM.jpeg') no-repeat center center/cover;
             position: relative;
         }
         .section-title {
