--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             font-family: 'Dancing Script', cursive;
         }
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./WhatsApp\ Image\ 2025-07-24\ at\ 12.01.20\ PM.jpeg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./images/back.jpeg') no-repeat center center/cover;
             position: relative;
         }
         .section-title {
