--- a/index.html
+++ b/index.html
@@ -1935,7 +1935,7 @@
             } else {
                  pageCounter.textContent = `Pages ${backPageNum*2-1} - ${backPageNum*2}`;
             }
-            // A more user-friendly counter
+            // A more user-friendly counter ok
             pageCounter.textContent = `Page ${currentPage} of ${totalPages}`;
         }
 
